appId: com.anonymous.boilerapp
---
- launchApp
- tapOn: 'Login.*'
- tapOn: '.*First Name'
- assertVisible: 'This app has two screens.*'
